--- a/exercicios/ex026/mq002/index.html
+++ b/exercicios/ex026/mq002/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/eretrato.css" media="screen and (orientation; portrai)">
-    <link rel="stylesheet" href="estios/paisagem.css" media="screen and(orientatio: landscape )">
+    <link rel="stylesheet" href="estilos/eretrato.css" media="screen and (orientation; portrait)">
+    <link rel="stylesheet" href="estios/paisagem.css" media="screen and (orientatio: landscape )">
 </head>
 <body>
     <h1>Mude a orientação do seu dispositivo</h1>
